orderSystem/k8s/ordersystem_service.yml
apiVersion: v1
kind: Service
metadata: 
  name: ordersystem-service
  namespace: milcho  # Service의 namespace 설정
spec:
  # ingress를 적용하기 위해 ClusterIP로 변경
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: ordersystem
